<resources>
    <string name="app_name">CSI VESIT</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="council">Council</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="about">About us</string>
    <string name="cont">Contact</string>
    <string name="contact">Contact CSI-VESIT</string>
    <string name="send">Send</string>
    <string name="entersubject">Enter Subject</string>
    <string name="entermessage">Enter Message</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="chooseimage">Select Image</string>
    <string name="upload">Upload</string>
    <string name="showupload">Show Uploads</string>
    <string name="name">Name</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">EMAIL</string>
    <string name="register">Register</string>
    <string name="emailus">Email us</string>
    <string name="csicouncil">CSI Council 2019-20</string>
    <string name="profile">Profile</string>
    <string name="magazine">Magazine</string>
    <string name="csi">CSI</string>
    <string name="csivesit">CSI-VESIT</string>
    <string name="news">News</string>

</resources>
