<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_event_24dp"
        android:title="@string/events"
        android:iconTint="@color/lightblue"
        android:iconTintMode="multiply"></item>
    <item
    android:id="@+id/contact"
    android:icon="@drawable/ic_contact_black_24dp"
    android:title="@string/cont"
    android:iconTint="@color/lightblue"
    android:iconTintMode="multiply"></item>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about"
        android:iconTint="@color/lightblue"
        android:iconTintMode="multiply"></item>
    <item
        android:id="@+id/council"
        android:icon="@drawable/ic_people_outline_black_24dp"
        android:title="@string/council"
        android:iconTint="@color/lightblue"
        android:iconTintMode="multiply"></item>
S

</menu>