<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textSize="50dp"
        android:textColor="#fff"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="Enter Email Address"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="Enter Password"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        />


    <Button
        android:id="@+id/login"
        android:layout_marginTop="50dp"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button2"
        android:text="@string/login"
        android:textSize="15dp"
        android:textColor="@color/white"
        />


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</LinearLayout>