<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="EDIT MEMBER"
       android:textSize="30dp"
       android:textColor="@color/white"
       android:layout_gravity="center"
       android:layout_margin="20dp"
       />
    <TextView
        android:id="@+id/Namecouncil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/contactinfo"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10sp"
        android:hint="Enter name"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        android:background="@drawable/rounded_edittext"
        />

    <TextView
        android:id="@+id/postcouncil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/contactinfo"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/post"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edittext"
        android:hint="Enter Post"
        android:textColorHint="@color/lightgrey"
        />

    <TextView
        android:id="@+id/contactCouncil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/workshop_details"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="Contact email id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/contactText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edittext"
        android:hint="Enter Contact Email id"
        android:textColorHint="@color/lightgrey"
        />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/upload"
        android:background="@drawable/rounded_button2"

        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:visibility="gone"
        />

</LinearLayout>