<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/cardview_dark_background"
    tools:context=".Event_admin">

    <LinearLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/image_view_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            />

        <Button
            android:id="@+id/choose_img_event"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_below="@+id/edit_text_message"
            android:background="@drawable/rounded_button2"
            android:text="@string/chooseimage"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/Namecouncil_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@id/contactinfo"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/workshop_name_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:hint="Enter Workshop name"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/lightgrey"
            android:background="@drawable/rounded_edittext"
            />

        <TextView
            android:id="@+id/postcouncil_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@id/contactinfo"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/workshop_details_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_edittext"
            android:hint="Enter Workshop Description"
            android:textColorHint="@color/lightgrey"
            />

        <Button
            android:id="@+id/select_date"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <ProgressBar
            android:id="@+id/progress_bar_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_margin="10dp"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/upload_button_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="100dp"
            android:text="@string/upload"
            android:background="@drawable/rounded_button2"
            />

    </LinearLayout>

</ScrollView>