<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/logout"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10sp"
            android:backgroundTint="@color/grey"
            android:src="@drawable/ic_exit_to_app_black_24dp"
            />
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profileavatar"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginHorizontal="20dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/emailicon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_margin="20dp"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/contacticon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_phone_black_24dp"
                        android:layout_margin="20dp"/>
                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/cont"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        />
             </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
   <HorizontalScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/contactcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <ImageView
                    android:id="@+id/contactcsiicon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_comment_black_24dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cont"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/csivesit"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
        android:id="@+id/magazinecard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/magazinecon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/csi"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/csivesit"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/magazine"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/webcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <ImageView
                    android:id="@+id/csinewsicon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_web_black_24dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/csi"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
   </HorizontalScrollView>
</LinearLayout>
</ScrollView>